--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -5,23 +5,22 @@ body {
     color: white;
 }
 
-table {
+.admin-table {
 	border-collapse: collapse;
 	color: white;
-    width: 100%;
 }
 
-table td, table th {
+.admin-table td, .admin-table th {
 	border: 1px solid #ddd;
 	text-align: left;
 	padding: 8px;
 }
 
-table tr:nth-child(even){background-color: #212529;}
+.admin-table tr:nth-child(even){background-color: #212529;}
 
-table tr:hover {background-color: #637383;}
+.admin-table tr:hover {background-color: #637383;}
 
-table th {
+.admin-table thead th {
 	padding-top: 12px;
 	padding-bottom: 12px;
 	text-align: left;
