--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,6 +14,7 @@
 // Fonts
 @include font('runescape', '/css/fonts/runescape/runescape');
 @include font('runescape-large', '/css/fonts/runescape-large/runescape-large');
+@include font('runescape-smooth', '/css/fonts/runescape-smooth/runescape-smooth');
 
 // Variables
 @import 'variables';
