--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,9 @@
 body,
 html
 {
-    background-color: #121e24;
-    background-image: url('/images/background-main.jpg') ;
-    background-position: center center;
+    background: #121e24 url('/images/background-main.jpg') no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 h1,
