--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,4 @@
-@import url('resource-pack.css');
+/*@import url('resource-pack.css');*/
 
 @tailwind base;
 @tailwind components;
@@ -22,13 +22,13 @@
 }
 
 h1 {
-    @apply text-2xl font-extrabold leading-none tracking-tight text-gray-900 header-chatbox-sword dark:text-white md:text-5xl lg:text-6xl;
+    @apply text-2xl font-extrabold leading-none tracking-tight text-gray-900 dark:text-white md:text-5xl lg:text-6xl;
 }
 h2 {
-    @apply text-xl font-extrabold leading-none tracking-tight text-gray-900 header-chatbox-sword dark:text-white md:text-4xl lg:text-5xl;
+    @apply text-xl font-extrabold leading-none tracking-tight text-gray-900 dark:text-white md:text-4xl lg:text-5xl;
 }
 h3 {
-    @apply text-lg font-extrabold leading-none tracking-tight text-gray-900 header-chatbox-sword dark:text-white md:text-3xl lg:text-4xl;
+    @apply text-lg font-extrabold leading-none tracking-tight text-gray-900 dark:text-white md:text-3xl lg:text-4xl;
 }
 h4 {
     @apply text-base font-extrabold leading-none tracking-tight text-gray-900 dark:text-white md:text-2xl lg:text-3xl;
