--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -41,11 +41,11 @@ h6 {
 }
 
 .card-lg {
-    @apply bg-white border border-gray-200 rounded-lg shadow dark:border-gray-700 dark:bg-gray-800 p-6 lg:p-8;
+    @apply bg-beige-400 border border-beige-700 rounded-lg shadow dark:border-gray-700 dark:bg-gray-800 p-6 lg:p-8;
 }
 .card-md {
-    @apply bg-white border border-gray-200 rounded-lg shadow dark:border-gray-700 dark:bg-gray-800 p-4 lg:p-6;
+    @apply bg-beige-400 border border-beige-700 rounded-lg shadow dark:border-gray-700 dark:bg-gray-800 p-4 lg:p-6;
 }
 .card-sm {
-    @apply bg-white border border-gray-200 rounded-lg shadow dark:border-gray-700 dark:bg-gray-800 p-2 lg:p-4;
+    @apply bg-beige-400 border border-beige-700 rounded-lg shadow dark:border-gray-700 dark:bg-gray-800 p-2 lg:p-4;
 }
