Replace card-* CSS classes with box

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -62,12 +62,14 @@ h6 {
     @apply text-xs font-extrabold leading-none tracking-tight text-gray-900 dark:text-white md:text-lg lg:text-xl;
 }
 
-.card-lg {
-    @apply bg-beige-400 border border-beige-700 rounded-lg shadow dark:border-gray-700 dark:bg-gray-800 p-6 lg:p-8;
+.box {
+    @apply bg-base-100 border border-base-300 rounded;
 }
-.card-md {
-    @apply bg-beige-400 border border-beige-700 rounded-lg shadow dark:border-gray-700 dark:bg-gray-800 p-4 lg:p-6;
+
+.box-tooltip {
+    @apply z-10 absolute rounded px-3 py-2   bg-neutral text-neutral-content text-sm;
 }
-.card-sm {
-    @apply bg-beige-400 border border-beige-700 rounded-lg shadow dark:border-gray-700 dark:bg-gray-800 p-2 lg:p-4;
+
+.tab {
+    @apply bg-base-100 border-base-300 focus:ring-0;
 }
